--- a/src/styles/foundation.css
+++ b/src/styles/foundation.css
@@ -54,9 +54,9 @@ a.btn {
 .btn-outline {
     display: inline-block;
     padding: 1.375rem 2.625rem 1.375rem 2.625rem;
-    border: 0.125rem solid #f4b01b;
+    border: 0.125rem solid #7baab6;
     background-color: transparent;
-    color: #f4b01b;
+    color: #7baab6;
     font: 700 0.75rem/1 "lato", sans-serif;
     text-decoration: none;
     transition: all 0.2s;
@@ -80,7 +80,7 @@ a.btn {
 }
 
 .btn-outline:hover {
-    background-color: #f4b01b;
+    background-color: #7baab6;
     color: #fff;
     text-decoration: none;
 }
@@ -88,8 +88,8 @@ a.btn {
 .btn-solid {
     display: inline-block;
     padding: 1.375rem 2.625rem 1.375rem 2.625rem;
-    border: 0.125rem solid #f4b01b;
-    background-color: #f4b01b;
+    border: 0.125rem solid #7baab6;
+    background-color: #7baab6;
     color: #ffffff;
     font: 700 0.75rem/1 "lato", sans-serif;
     text-decoration: none;
@@ -98,7 +98,7 @@ a.btn {
 
 .btn-solid:hover {
     background-color: transparent;
-    color: #f4b01b;
+    color: #7baab6;
     text-decoration: none;
 }
 
@@ -147,7 +147,7 @@ a.btn {
 }
 
 .link-decoration {
-    box-shadow: inset 0 -2px 0 #f4b01b;
+    box-shadow: inset 0 -2px 0 #7baab6;
     -webkit-transition: box-shadow 0.3s ease-in-out;
     transition: box-shadow 0.3s ease-in-out;
     margin: auto;
@@ -162,7 +162,7 @@ a.btn {
 }
 
 .title-decoration {
-    box-shadow: inset 0 -4px 0 #f4b01b;
+    box-shadow: inset 0 -4px 0 #7baab6;
     -webkit-transition: box-shadow 0.3s ease-in-out;
     transition: box-shadow 0.3s ease-in-out;
     margin: auto;
@@ -197,7 +197,7 @@ a.btn {
 }
 
 .text-red {
-    color: #f4b01b !important;
+    color: #7baab6 !important;
 }
 .blur-bgimage {
     -webkit-backdrop-filter: blur(10px);
