--- a/src/styles/priceTable.css
+++ b/src/styles/priceTable.css
@@ -19,7 +19,7 @@
 .price-indicator {
     display: inline-block;
     padding: 1.375rem 2.625rem 1.375rem 2.625rem;
-    border: 0.125rem solid #f4b01b;
+    border: 0.125rem solid #7baab6;
     background-color: transparent;
     color: #ffffff !important;
     font: 700 0.75rem/1 "lato", sans-serif;
@@ -30,13 +30,13 @@
 }
 
 .price-indicator:hover {
-    background-color: #f4b01b;
+    background-color: #7baab6;
     color: #fff;
     text-decoration: none;
 }
 
 .price-indicator.active {
-    background-color: #f4b01b;
+    background-color: #7baab6;
     color: #fff;
     text-decoration: none;
 }
